Fixed navbar on mobile

--- a/css/style-768.css
+++ b/css/style-768.css
@@ -1,4 +1,8 @@
 @media only screen and (min-width: 768px) {
+  body {
+    padding-top: 65px;
+  }
+  
   .header-nav {
     font-size: 1.1em;
   }
