--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  padding-top: 50px;
+  padding-top: 65px;
   padding-bottom: 50px;
   padding-left: 15px;
   padding-right: 15px;
@@ -33,8 +33,15 @@ header {
 
 .header-nav {
   align-self: center;
-  font-size: 0.9em;
+  font-size: 0.8em;
   text-align: right;
+  padding-left: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  white-space: nowrap;
+  background-color: red;
+  margin-right: 15px;
 }
 
 .header-nav > div {
